--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alurabooks</title>
     <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
@@ -40,19 +41,120 @@
             <a href="#"><img src="./assets/header/Usuario.svg" alt="Meu Perfil" class="container__imagem"></a>
         </div>
     </header>
-    <main>
-        <section class="banner">
-            <h2 class="banner__titulo">Já sabe por onde começar?</h2>
-            <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
-            <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
-         </section>
+    <section class="banner">
+        <h2 class="banner__titulo">Já sabe por onde começar?</h2>
+        <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+        <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
+    </section>
+    <section class="carrossel">
+        <h2 class="carrossel__titulo">Ultimos Lançamentos</h2>
+                <!-- Slider main container -->
+        <div class="swiper">
 
-         <section class="carrossel">
-            <h2 class="carrossel__titulo">Ultimos Lançamentos</h2>
-         </section>
-    </main>
+                <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+                <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="./assets/main/livros/ApacheKafka.svg" alt="Livro de ApacheKafka"></div>
+                <div class="swiper-slide"><img src="./assets/main/livros/Arquitetura.svg" alt="Livro de Arquitetura"></div>
+                <div class="swiper-slide"><img src="./assets/main/livros/Gestão.svg" alt="Livro de Gestão"></div>
+                <div class="swiper-slide"><img src="./assets/main/livros/Javascript.svg" alt="Livro de Javascript"></div>
+                <div class="swiper-slide"><img src="./assets/main/livros/Portugol.svg" alt="Livro de Portugol"></div>
+                <div class="swiper-slide"><img src="./assets/main/livros/Nodejs.svg" alt="Livro de Nodejs"></div>
+            </div>
+                 <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+
+        <div class="card">
+            <div class="card__descricao">
+                <div class="descricao">
+                    <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                    <h2 class="descricao__titulo__livro">Angular 11 e Firebase</h2>
+                    <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                </div>
+                <img src="./assets/main/Angular_Img.svg" alt="Imagem do Logo do Angular" class="descricao__imagem">
+            </div>
+
+            <div class="card__botoes">
+                <ul class="botoes">
+                    <li class="botoes__item"><img src="./assets/header/Favoritos.svg" alt="Adcionar Livro aos Favoritos"></li>
+                    <li class="botoes__item"><img src="./assets/header/Sacola.svg" alt="Adcionar Livro ao carrinho de Compras"></li>
+                </ul>
+                <a class="botoes__ancora" href="#">Saiba Mais</a>
+            </div>
+        </div>
+    </section>
+    <section class="carrossel">
+        <h2 class="carrossel__titulo">Mais Vendidos</h2>
+                <!-- Slider main container -->
+        <div class="swiper">
+
+                <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+                <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="./assets/main/livros/Angular/Angular.svg" alt="Livro de Angular"></div>
+                <div class="swiper-slide"><img src="./assets/main/livros/Tuning.svg" alt="Livro de Tuning"></div>
+                <div class="swiper-slide"><img src="./assets/main/livros/Gestão2.svg" alt="Livro de Gestão"></div>
+                <div class="swiper-slide"><img src="./assets/main/livros/Angular/Acessibilidade.svg" alt="Livro de Acessibilidade"></div>
+                <div class="swiper-slide"><img src="./assets/main/livros/Angular/Guia Front-end.svg" alt="Livro de Guia Front-end"></div>
+                <div class="swiper-slide"><img src="./assets/main/livros/Nodejs.svg" alt="Livro de Nodejs"></div>
+            </div>
+                 <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+
+        <div class="card">
+            <div class="card__descricao">
+                <div class="descricao">
+                    <img class="descricao__decoracao" src="./assets/main/Estrelinhas.svg">
+                    <h3 class="descricao__titulo">Autora do Mês</h3>
+                    <h2 class="descricao__titulo__livro">Juliana Agarikov</h2>
+                    <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End. </p>
+                </div>
+                <img src="./assets/main/Perfil-escritora 1.svg" alt="Foto de Juliana Agarikov" class="descricao__imagem">
+            </div>
+
+            <div class="card__botoes">
+                <ul class="botoes">
+                    <li class="botoes__item"><img src="./assets/header/Favoritos.svg" alt="Adcionar Livro aos Favoritos"></li>
+                    <li class="botoes__item"><img src="./assets/header/Sacola.svg" alt="Adcionar Livro ao carrinho de Compras"></li>
+                </ul>
+                <a class="botoes__ancora" href="#">Saiba Mais</a>
+            </div>
+        </div>
+    </section>
+    <section class="topicos">
+        <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+        <ul class="topicos__lista">
+            <li class="lista__item"><a href="#" class="lista__link">Android</a></li>
+            <li class="lista__item"><a href="#" class="lista__link">Marketing Digital</a></li>
+            <li class="lista__item"><a href="#" class="lista__link">Agile</a></li>
+            <li class="lista__item"><a href="#" class="lista__link">Startups</a></li>
+            <li class="lista__item"><a href="#" class="lista__link">HTML & CSS</a></li>
+            <li class="lista__item"><a href="#" class="lista__link">Python</a></li>
+            <li class="lista__item"><a href="#" class="lista__link">OO</a></li>
+            <li class="lista__item"><a href="#" class="lista__link">Java</a></li>
+        </ul>
+    </section>
     <footer>
 
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>
+        const swiper = new Swiper('.swiper', {
+            spaceBetween: 10,
+            slidesPerView: 3,
+            pagination: {
+                el: '.swiper-pagination',
+                type: 'bullets',
+            }
+        });
+    </script>
 </body>
 </html>
