--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
             <li class="lista__item"><a href="#" class="lista__link">Java</a></li>
         </ul>
     </section>
+    <section class="contato">
+        <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+        <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+        <input type="email" class="contato__email" placeholder="Cadastre seu email">
+    </section>
     <footer>
 
     </footer>
