--- a/index.html
+++ b/index.html
@@ -183,6 +183,79 @@
     <hr />
     <footer class="rodape">
         <h2 class="rodape__titulo">Grupo Alura</h2>
+        <ul class="lista__rodape">
+            <li class="lista__rodape__titulo">Educação</li>
+            <li class="lista__rodape__item">
+                <img src="./assets/footer/Caelum.svg" alt="Logo da Caelum" class="item__logo">
+                <a class="item__link" href="#">Caelum</a>
+            </li>
+            <li class="lista__rodape__item">
+                <img src="./assets/footer/CasaDoCodigo.svg" alt="Logo da Casa do Codigo" class="item__logo">
+                <a class="item__link" href="#">Casa do Codigo</a>
+            </li>
+        </ul>
+        <ul class="lista__rodape">
+            <li class="lista__rodape__titulo">Educação Online</li>
+            <li class="lista__rodape__item">
+                <img src="./assets/footer/Alura.svg" alt="Logo da Alura" class="item__logo">
+                <a class="item__link" href="#">Alura</a>
+            </li>
+            <li class="lista__rodape__item">
+                <img src="./assets/footer/AluraEmpresas.svg" alt="Logo da Alura para Empresas" class="item__logo">
+                <a class="item__link" href="#">Alura para Empresas</a>
+            </li>
+            <li class="lista__rodape__item">
+                <img src="./assets/footer/AluraLATAM.svg" alt="Logo da AluraLATAM"class="item__logo">
+                <a class="item__link" href="#">Alura LATAM</a>
+            </li>
+            <li class="lista__rodape__item">
+                <img src="./assets/footer/AluraStart.svg" alt="Logo da Alura Start"class="item__logo">
+                <a class="item__link" href="#">Alura Start</a>
+            </li>
+            <li class="lista__rodape__item">
+                <img src="./assets/footer/MusicDot.svg" alt="Logo da MusicDot"class="item__logo">
+                <a class="item__link" href="#">Alura MusicDot</a>
+            </li>
+            <li class="lista__rodape__item">
+                <img src="./assets/footer/AluraLingua.svg" alt="Logo da Alura Lingua"class="item__logo">
+                <a class="item__link" href="#">Alura Língua</a>
+            </li>
+            <li class="lista__rodape__item">
+                <img src="./assets/footer/PM3.svg" alt="Logo da PM3"class="item__logo">
+                <a class="item__link" href="#">PM3</a>
+            </li>
+        </ul>
+        <ul class="lista__rodape">
+            <li class="lista__rodape__titulo">Comunidade</li>
+            <li class="lista__rodape__item">
+                <img src="./assets/footer/HipstersTech.svg" alt="Logo do HipstersTech" class="item__logo">
+                <a class="item__link" href="#">Hipsters ponto Tech</a>
+            </li>
+            <li class="lista__rodape__item">
+                <img src="./assets/footer/ScubaDev.svg" alt="Logo da ScubaDev" class="item__logo">
+                <a class="item__link" href="#">ScubaDev</a>
+            </li>
+            <li class="lista__rodape__item">
+                <img src="./assets/footer/LayersTech.svg" alt="Logo da LayersTech"class="item__logo">
+                <a class="item__link" href="#">Layers ponto Tech</a>
+            </li>
+            <li class="lista__rodape__item">
+                <img src="./assets/footer/LikeABoss.svg" alt="Logo da Lika A Boss"class="item__logo">
+                <a class="item__link" href="#">Like A Boss</a>
+            </li>
+            <li class="lista__rodape__item">
+                <img src="./assets/footer/CarreiraSemFronteira.svg" alt="Logo da CarreiraSemFronteira"class="item__logo">
+                <a class="item__link" href="#">Carreira Sem Fronteira</a>
+            </li>
+            <li class="lista__rodape__item">
+                <img src="./assets/footer/HipstersJobs.svg" alt="Logo da HipstersJobs"class="item__logo">
+                <a class="item__link" href="#">Hipsters ponto Jobs</a>
+            </li>
+            <li class="lista__rodape__item">
+                <img src="./assets/footer/GUJ.svg" alt="Logo da GUJ"class="item__logo">
+                <a class="item__link" href="#">GUJ</a>
+            </li>
+        </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
