--- a/index.html
+++ b/index.html
@@ -67,9 +67,17 @@
         </ul>
 
         <div class="container">
-            <a href="#"><img src="./assets/header/Favoritos.svg" alt="Meus Favoritos" class="container__imagem container__imagem-transparente"></a>
-            <a href="#"><img src="./assets/header/Sacola.svg" alt="Carrinho de Compras" class="container__imagem"></a>
-            <a href="#"><img src="./assets/header/Usuario.svg" alt="Meu Perfil" class="container__imagem"></a>
+            <a href="#">
+                <img src="./assets/header/Favoritos.svg" alt="Meus Favoritos" class="container__imagem container__imagem-transparente">
+            </a>
+            <a href="#" class="container__link">
+                <img src="./assets/header/Sacola.svg" alt="Carrinho de Compras" class="container__imagem">
+                <p class="container__texto">Minha Sacola</p>
+            </a>
+            <a href="#" class="container__link">
+                <img src="./assets/header/Usuario.svg" alt="Meu Perfil" class="container__imagem">
+                <p class="container__texto">Meu Perfil</p>
+            </a>
         </div>
     </header>
     <section class="banner">
