--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="cabecalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
-            <label for="menu">
+            <label for="menu" class="container__rotulo">
                 <span class="cabecalho__menu-hamburguer container__imagem"></span>
             </label>
             <ul class="lista-menu">
@@ -40,7 +40,7 @@
 
         <ul class="opcoes">
             <input type="checkbox" id="opcoes__menu" class="opcoes__botao">
-            <label for="opcoes__menu">
+            <label for="opcoes__menu" class="opcoes__rotulo">
                 <li class="opcoes__lista">Categorias</li>
             </label>
 
@@ -88,83 +88,87 @@
     <section class="carrossel">
         <h2 class="carrossel__titulo">Ultimos Lançamentos</h2>
                 <!-- Slider main container -->
-        <div class="swiper">
+        <div class="carrossel__container">
+            <div class="swiper">
 
                 <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
+                <div class="swiper-pagination"></div>
                 <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
+                <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide"><img src="./assets/main/livros/ApacheKafka.svg" alt="Livro de ApacheKafka"></div>
-                <div class="swiper-slide"><img src="./assets/main/livros/Arquitetura.svg" alt="Livro de Arquitetura"></div>
-                <div class="swiper-slide"><img src="./assets/main/livros/Gestão.svg" alt="Livro de Gestão"></div>
-                <div class="swiper-slide"><img src="./assets/main/livros/Javascript.svg" alt="Livro de Javascript"></div>
-                <div class="swiper-slide"><img src="./assets/main/livros/Portugol.svg" alt="Livro de Portugol"></div>
-                <div class="swiper-slide"><img src="./assets/main/livros/Nodejs.svg" alt="Livro de Nodejs"></div>
-            </div>
-                 <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-
-        <div class="card">
-            <div class="card__descricao">
-                <div class="descricao">
-                    <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
-                    <h2 class="descricao__titulo__livro">Angular 11 e Firebase</h2>
-                    <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    <div class="swiper-slide"><img src="./assets/main/livros/ApacheKafka.svg" alt="Livro de ApacheKafka"></div>
+                    <div class="swiper-slide"><img src="./assets/main/livros/Arquitetura.svg" alt="Livro de Arquitetura"></div>
+                    <div class="swiper-slide"><img src="./assets/main/livros/Gestão.svg" alt="Livro de Gestão"></div>
+                    <div class="swiper-slide"><img src="./assets/main/livros/Javascript.svg" alt="Livro de Javascript"></div>
+                    <div class="swiper-slide"><img src="./assets/main/livros/Portugol.svg" alt="Livro de Portugol"></div>
+                    <div class="swiper-slide"><img src="./assets/main/livros/Nodejs.svg" alt="Livro de Nodejs"></div>
                 </div>
-                <img src="./assets/main/Angular_Img.svg" alt="Imagem do Logo do Angular" class="descricao__imagem">
+                 <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
 
-            <div class="card__botoes">
-                <ul class="botoes">
-                    <li class="botoes__item"><img src="./assets/header/Favoritos.svg" alt="Adcionar Livro aos Favoritos"></li>
-                    <li class="botoes__item"><img src="./assets/header/Sacola.svg" alt="Adcionar Livro ao carrinho de Compras"></li>
-                </ul>
-                <a class="botoes__ancora" href="#">Saiba Mais</a>
+            <div class="card">
+                <div class="card__descricao">
+                    <div class="descricao">
+                        <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                        <h2 class="descricao__titulo__livro">Angular 11 e Firebase</h2>
+                        <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    </div>
+                    <img src="./assets/main/Angular_Img.svg" alt="Imagem do Logo do Angular" class="descricao__imagem">
+                </div>
+
+                <div class="card__botoes">
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="./assets/header/Favoritos.svg" alt="Adcionar Livro aos Favoritos"></li>
+                        <li class="botoes__item"><img src="./assets/header/Sacola.svg" alt="Adcionar Livro ao carrinho de Compras"></li>
+                    </ul>
+                    <a class="botoes__ancora" href="#">Saiba Mais</a>
+                </div>
             </div>
+            </section>
         </div>
-    </section>
-    <section class="carrossel">
-        <h2 class="carrossel__titulo">Mais Vendidos</h2>
+            <section class="carrossel">
+            <h2 class="carrossel__titulo">Mais Vendidos</h2>
                 <!-- Slider main container -->
-        <div class="swiper">
+        <div class="carrossel__container">    
+            <div class="swiper">
 
-                <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-                <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide"><img src="./assets/main/livros/Angular/Angular.svg" alt="Livro de Angular"></div>
-                <div class="swiper-slide"><img src="./assets/main/livros/Tuning.svg" alt="Livro de Tuning"></div>
-                <div class="swiper-slide"><img src="./assets/main/livros/Gestão2.svg" alt="Livro de Gestão"></div>
-                <div class="swiper-slide"><img src="./assets/main/livros/Angular/Acessibilidade.svg" alt="Livro de Acessibilidade"></div>
-                <div class="swiper-slide"><img src="./assets/main/livros/Angular/Guia Front-end.svg" alt="Livro de Guia Front-end"></div>
-                <div class="swiper-slide"><img src="./assets/main/livros/Nodejs.svg" alt="Livro de Nodejs"></div>
-            </div>
-                 <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-
-        <div class="card">
-            <div class="card__descricao">
-                <div class="descricao">
-                    <img class="descricao__decoracao" src="./assets/main/Estrelinhas.svg">
-                    <h3 class="descricao__titulo">Autora do Mês</h3>
-                    <h2 class="descricao__titulo__livro">Juliana Agarikov</h2>
-                    <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End. </p>
+                    <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+                    <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                        <!-- Slides -->
+                    <div class="swiper-slide"><img src="./assets/main/livros/Angular/Angular.svg" alt="Livro de Angular"></div>
+                    <div class="swiper-slide"><img src="./assets/main/livros/Tuning.svg" alt="Livro de Tuning"></div>
+                    <div class="swiper-slide"><img src="./assets/main/livros/Gestão2.svg" alt="Livro de Gestão"></div>
+                    <div class="swiper-slide"><img src="./assets/main/livros/Angular/Acessibilidade.svg" alt="Livro de Acessibilidade"></div>
+                    <div class="swiper-slide"><img src="./assets/main/livros/Angular/Guia Front-end.svg" alt="Livro de Guia Front-end"></div>
+                    <div class="swiper-slide"><img src="./assets/main/livros/Nodejs.svg" alt="Livro de Nodejs"></div>
                 </div>
-                <img src="./assets/main/Perfil-escritora 1.svg" alt="Foto de Juliana Agarikov" class="descricao__imagem">
+                    <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
 
-            <div class="card__botoes">
-                <ul class="botoes">
-                    <li class="botoes__item"><img src="./assets/header/Favoritos.svg" alt="Adcionar Livro aos Favoritos"></li>
-                    <li class="botoes__item"><img src="./assets/header/Sacola.svg" alt="Adcionar Livro ao carrinho de Compras"></li>
-                </ul>
-                <a class="botoes__ancora" href="#">Saiba Mais</a>
+            <div class="card">
+                <div class="card__descricao">
+                    <div class="descricao">
+                        <img class="descricao__decoracao" src="./assets/main/Estrelinhas.svg">
+                        <h3 class="descricao__titulo">Autora do Mês</h3>
+                        <h2 class="descricao__titulo__livro">Juliana Agarikov</h2>
+                        <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End. </p>
+                    </div>
+                    <img src="./assets/main/Perfil-escritora 1.svg" alt="Foto de Juliana Agarikov" class="descricao__imagem">
+                </div>
+
+                <div class="card__botoes">
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="./assets/header/Favoritos.svg" alt="Adcionar Livro aos Favoritos"></li>
+                        <li class="botoes__item"><img src="./assets/header/Sacola.svg" alt="Adcionar Livro ao carrinho de Compras"></li>
+                    </ul>
+                    <a class="botoes__ancora" href="#">Saiba Mais</a>
+                </div>
             </div>
         </div>
     </section>
